--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -14,7 +14,7 @@
                 <div class="pull-left">
                     <i class="kk kk-25 kk-checked" ng-class="{'active':report.selected}"></i>
                 </div>
-                <span class="list-group-item-text">{{report.title}}</span>
+                <span class="list-group-item-text">{{report.title |translate}}</span>
             </div>
             <div class="list-group-item" ng-show="input.other_show">
                 <input type="text" name="other" ng-model="input.other" class="form-control rectangle">
