--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -136,8 +136,11 @@
                                 {{"Place" | translate}}<span class="text-danger">*</span>
                             </div>
                         </div>
-                        <div class="section large text-right">
+                        <div class="section large text-right" ng-if="choosen.city.country != ''">
                             {{choosen.city.country+choosen.city.name}}
+                        </div>
+                        <div class="section large text-right" ng-if="choosen.city.country == ''">
+                            {{"Please choose"|translate}}
                         </div>
                         <div class="semi-fixed-right semi-wide-40">
                             <span class="btn"><i class="fa fa-chevron-right text-gray-light"></i></span>
@@ -165,8 +168,7 @@
                     <textarea name="content" cols="30" rows="10" class="form-control" ng-model="input.content" required placeholder="{{'Please enter' | translate}}"></textarea>
                 </div>
                 <div class="section large bg-transparent">
-                    请详细描述任务的内容，行程和要求；是否需其他服务（例如，接送机或包车等）。
-                    <p> 注意：其他服务所产生的开销和其他额外花费（例如，景点门票或跨城市交通等）不包含在翻译任务价钱中，并应由任务发布人承担，请待任务确认后自行与翻译者商讨。</p>
+                    {{"Please describe the task details, schedule, and requirements. If there is any request for other service (e.g. airport pick-up or vehicle), please specify.Note: any fee caused by other services and any additional fees(e.g.tickets for resorts, or intra - city transportation, etc.) are not included in the interpretering fee,and should be paid by the task owner.Please negotiate details with the interpreter after the task is confirmed."|translate}}
                 </div>
                 <div class="section large bg-transparent">
                     <button type="button" class="btn btn-default pull-left" ui-set="{step:1}">{{"Previous" | translate}}</button>
@@ -207,7 +209,7 @@
                                 {{"Date"| translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
-                                <p>{{input.from_date | date:"yyyy-MM-dd"}}<span class="btn"></span>{{input.from_time | date:"HH:mm"}} 至</p>
+                                <p>{{input.from_date | date:"yyyy-MM-dd"}}<span class="btn"></span>{{input.from_time | date:"HH:mm"}} {{"To"|translate}}</p>
                                 {{input.to_date | date:"yyyy-MM-dd"}}<span class="btn"></span>{{input.to_time | date:"HH:mm"}}
                             </div>
                             <div class="kk-line kk-horizon bg-gray-lighter"></div>
@@ -280,8 +282,8 @@
                     </div>
                 </div>
                 <div class="section bg-transparent">
-                    <p>敬请留意：</p>
-                    <p>悠译仅提供平台，不是服务提供商，悠译并不参与当地服务供应，请用户自行甄别和选择，悠译概不负责。如行程中有未注明的非自愿活动或购物，请举报。</p>
+                    <p>{{"Important Notice"|translate}}：</p>
+                    {{"UE Lives provides this platform to facilitate transaction, but we are not a local service provider and do not provide local services. Users should select services wisely. UE Lives is not responsible for any lost. If there is any charge for non-voluntary activities or shopping, please report to us."|translate}}
                 </div>
                 <div class="section large bg-transparent">
                     <button type="button" class="btn btn-default pull-left" ui-set="{step:2}">{{"Previous" | translate}}</button>
