--- a/src/templates/modify_phone_email.html
+++ b/src/templates/modify_phone_email.html
@@ -20,7 +20,7 @@
                 <!-- <span class="tip text-warning" ng-show="modifyForm.verifycode.$invalid && modifyForm.verifycode.$dirty">必填，验证码为6位</span> -->
             </div>
             <div class="kk-input-group flat">
-                <input type="password" name="password" class="form-control" placeholder="{{'Enter Old Password' | translate}}" ng-model="input.password" required ng-minlength=8 />
+                <input type="password" name="password" class="form-control" placeholder="{{'Enter Password' | translate}}" ng-model="input.password" required ng-minlength=8 />
                 <!-- <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码至少8位</span> -->
             </div>
             <div class="kk-input-group">
