--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -19,7 +19,9 @@
         <!-- banner -->
         <banner data-options="{}" data-rate="750/175">
             <div class="image-holder" ng-repeat="b in banners" on-repeat-done>
-                <img ng-src="{{staticImageUrl + b.cover}}" err-src="../images/banner.png" class="block full-width" alt="">
+                <a ng-href="{{b.banner_url}}" target="blank" class="block">
+                    <img ng-src="{{staticImageUrl + b.cover}}" err-src="../images/banner.png" class="block full-width" alt="">
+                </a>
             </div>
         </banner>
         <!-- filter -->
