--- a/src/templates/me_info.html
+++ b/src/templates/me_info.html
@@ -30,6 +30,29 @@
                 </span>
             </div>
             <div class="list-group-item clearfix kk-input-group">
+                <span class="btn col-xs-3 section-wide text-left">{{"Birthday" | translate}}</span>
+                <span class="col-xs-9 section-wide">
+                    <select style="margin-left:8px;margin-top:5px" ng-model="birthday.y" ng-options="y as y for y in birthday.year">
+                    </select>
+                    <select ng-model="birthday.m" ng-options="m as m for m in birthday.month"></select>
+                    <select ng-model="birthday.d" ng-options="d as d for d in birthday.day"></select>
+                </span>
+            </div>
+            <div class="list-group-item clearfix kk-input-group">
+                <span class="btn col-xs-3 section-wide text-left">{{"show age" | translate}}</span>
+                <span class="col-xs-9 section-wide">
+                    <label class="btn" style="min-width:60px">
+                        <i class="kk kk-icon kk-radio" ng-class="{'active':user.age_status == '1'}"></i>
+                        <input type="radio" name="male" ng-model="user.age_status"  value="1" class="hidden">{{"YES" | translate}}
+                    </label>
+                    <label class="btn" style="min-width:60px">
+                        <i class="kk kk-icon kk-radio" ng-class="{'active':user.age_status == '0'}"></i>
+                        <input type="radio" name="female" ng-model="user.age_status" value="0" class="hidden">{{"NO" | translate}}
+                    </label>
+                <!-- <span class="tip text-warning">error</span> -->
+                </span>
+            </div>
+            <div class="list-group-item clearfix kk-input-group">
                 <span class="btn col-xs-3 section-wide text-left">{{"Gender" | translate}}</span>
                 <span class="col-xs-9 section-wide">
                     <label class="btn" style="min-width:60px">
