signin use weixin

--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -23,7 +23,8 @@
                 <i class="kk kk-50 kk-weibo"></i>
                 <span class="block text-gray">{{"Weibo" | translate}}</span>
             </a>
-            <a class="btn">
+            <!-- ng-href="{{weixinOauthUrl}}" -->
+            <a class="btn" ng-click="weixinLogin()">
                 <i class="kk kk-50 kk-weixin"></i>
                 <span class="block text-gray">{{"WeChat" | translate}}</span>
             </a>
