add weixin login and weixin share

--- a/src/templates/oauth.html
+++ b/src/templates/oauth.html
@@ -2,3 +2,6 @@
 <div ui-content-for="title">...</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction"></div>
+<div ng-controller="weixinController"></div>
+<div ng-controller="weiboController"></div>
+<div ng-controller="facebookController"></div>
