--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -14,7 +14,7 @@
                 <div class="translator-info left">
                     <span class="h3 block">
                     {{translator.nickname}}
-                    <i class="kk kk-icon" ng-class="{'kk-male':translator.gender=='1','kk-female':translator.gender !='1'}"></i>
+                    <i class="kk kk-icon" ng-class="{'kk-male':translator.gender=='1','kk-female':translator.gender !='1'}" style="position:absolute"></i>
                 </span>
                     <span class="block">{{"Followed by XXX" | translate:translate_with_value(translator.foucus_count)}}</span>
                 </div>
