add weibo login

--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -174,7 +174,7 @@
                     </li>
                     <li class="divider"></li>
                     <li>
-                        <a ng-href="{{share_footer.share.facebook}}">
+                        <a ng-click="facebookShare()">
                             <i class="kk kk-30 kk-facebook"></i>
                             <span class="text-gray">{{"Facebook" | translate}}</span>
                         </a>
