--- a/src/templates/me_info.html
+++ b/src/templates/me_info.html
@@ -30,7 +30,7 @@
                 </span>
             </div>
             <div class="list-group-item clearfix kk-input-group">
-                <span class="btn col-xs-3 section-wide text-left">{{"Birthday" | translate}}</span>
+                <span class="btn col-xs-3 section-wide text-left">{{"Date of Birth" | translate}}</span>
                 <span class="col-xs-9 section-wide">
                     <select style="margin-left:8px;margin-top:5px" ng-model="birthday.y" ng-options="y as y for y in birthday.year">
                     </select>
@@ -39,15 +39,15 @@
                 </span>
             </div>
             <div class="list-group-item clearfix kk-input-group">
-                <span class="btn col-xs-3 section-wide text-left">{{"show age" | translate}}</span>
+                <span class="btn col-xs-3 section-wide text-left">{{"age" | translate}}</span>
                 <span class="col-xs-9 section-wide">
                     <label class="btn" style="min-width:60px">
                         <i class="kk kk-icon kk-radio" ng-class="{'active':user.age_status == '1'}"></i>
-                        <input type="radio" name="male" ng-model="user.age_status"  value="1" class="hidden">{{"YES" | translate}}
+                        <input type="radio" name="male" ng-model="user.age_status"  value="1" class="hidden">{{"Public" | translate}}
                     </label>
                     <label class="btn" style="min-width:60px">
                         <i class="kk kk-icon kk-radio" ng-class="{'active':user.age_status == '0'}"></i>
-                        <input type="radio" name="female" ng-model="user.age_status" value="0" class="hidden">{{"NO" | translate}}
+                        <input type="radio" name="female" ng-model="user.age_status" value="0" class="hidden">{{"Private" | translate}}
                     </label>
                 <!-- <span class="tip text-warning">error</span> -->
                 </span>
@@ -58,10 +58,12 @@
                     <label class="btn" style="min-width:60px">
                         <i class="kk kk-icon kk-radio" ng-class="{'active':user.gender == '1'}"></i>
                         <input type="radio" name="male" ng-model="user.gender"  value="1" class="hidden">{{"Male" | translate}}
+                        <i class="kk kk-icon kk-male"></i>
                     </label>
                     <label class="btn" style="min-width:60px">
                         <i class="kk kk-icon kk-radio" ng-class="{'active':user.gender == '2'}"></i>
                         <input type="radio" name="female" ng-model="user.gender" value="2" class="hidden">{{"Female" | translate}}
+                        <i class="kk kk-icon kk-female"></i>
                     </label>
                 <!-- <span class="tip text-warning">error</span> -->
                 </span>
