--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -19,7 +19,7 @@
             --------{{"Or Login with Other Accounts" | translate}}--------
         </div>
         <div class="btn-group justified">
-            <a class="btn" id="wb_connect_btn">
+            <a class="btn" ng-click="weiboLogin()">
                 <i class="kk kk-50 kk-weibo"></i>
                 <span class="block text-gray">{{"Weibo" | translate}}</span>
             </a>
@@ -214,7 +214,7 @@
                     <i class="kk kk-50 kk-weixin"></i>
                     <span class="block text-gray">{{"WeChat" | translate}}</span>
                 </a>
-                <a class="btn" ng-href="{{sidebar.share.facebook}}">
+                <a class="btn" ng-click="facebookShare()">
                     <i class="kk kk-50 kk-facebook"></i>
                     <span class="block text-gray">{{"Facebook" | translate}}</span>
                 </a>
