--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -108,7 +108,7 @@
                         <p class="section large bg-transparent" ng-if="wallet.is_setPayPwd == 0">
                             {{"Please Set Transaction Password First" | translate}}
                         </p>
-                        <button type="submit" class="btn btn-primary" ng-disabled="paymentForm.edit.$invalid || wallet.is_setPayPwd == 0">{{"Confirm And Pay" | translate}}</button>
+                        <button type="submit" class="btn btn-primary" ng-disabled="paymentForm.edit.$invalid || wallet.is_setPayPwd == 0">{{"Confirm" | translate}}</button>
                     </div>
                 </div>
             </div>
