--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -206,7 +206,7 @@
     <div class="scrollable-footer">
         <div class="section large bg-gray-lighter text-center" ng-show="sidebar.share.socialshare">
             <div class="btn-group justified">
-                <a class="btn" ng-href="{{sidebar.share.sina}}">
+                <a class="btn" ng-href="{{sidebar.share.sina}}" target="blank">
                     <i class="kk kk-50 kk-weibo"></i>
                     <span class="block text-gray">{{"Weibo" | translate}}</span>
                 </a>
