sina share and facebook share

--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -206,11 +206,11 @@
     <div class="scrollable-footer">
         <div class="section large bg-gray-lighter text-center" ng-show="sidebar.share.socialshare">
             <div class="btn-group justified">
-                <a class="btn" ng-href="{{sidebar.share.sina}}" target="blank">
+                <a class="btn" ng-href="{{sidebar.share.sina}}">
                     <i class="kk kk-50 kk-weibo"></i>
                     <span class="block text-gray">{{"Weibo" | translate}}</span>
                 </a>
-                <a class="btn" ng-click="share_weixin()">
+                <a class="btn" ng-click="weixinShare()">
                     <i class="kk kk-50 kk-weixin"></i>
                     <span class="block text-gray">{{"WeChat" | translate}}</span>
                 </a>
