--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -225,7 +225,7 @@
                 </span>
             </div>
             <!-- banner -->
-            <previewer data-options="{autoPlay:10000}" data-rate="1">
+            <previewer data-options="{autoPlay:10000}" data-rate="auto">
                 <div class="image-holder" ng-repeat="b in preview_images" on-repeat-done>
                     <img ng-src="{{staticImageUrl + b.pic}}" err-src="../images/banner.png" class="block full-width" alt="">
                 </div>
