optional wallet not set trade password

--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -106,10 +106,10 @@
                         </label>
                     </div>
                     <div class="section text-center">
-                        <p class="section large bg-transparent" ng-if="wallet.is_setPayPwd == 0">
-                            {{"Please Set Transaction Password First" | translate}}
-                        </p>
-                        <button type="submit" class="btn btn-primary" ng-disabled="paymentForm.edit.$invalid || wallet.is_setPayPwd == 0">{{"Confirm" | translate}}</button>
+                        <button type="submit" class="btn btn-primary" ng-disabled="paymentForm.edit.$invalid">
+                            <span ng-if="wallet.is_setPayPwd == 0">{{"Please Set Transaction Password First" | translate}}</span>
+                            <span ng-if="wallet.is_setPayPwd == 1">{{"Confirm" | translate}}</span>
+                        </button>
                     </div>
                 </div>
             </div>
