--- a/src/templates/me.html
+++ b/src/templates/me.html
@@ -344,10 +344,10 @@
                 <div class="modal-footer text-center">
                     <div class="btn-group justified">
                         <span class="btn btn-default" ng-click="back()">
-                            {{"Quit"}}
+                            {{"Quit"| translate}}
                         </span>
                         <span class="btn btn-primary" ng-click="completeProfile()">
-                            {{"Go Complete Profile"}}
+                            {{"Go Complete Profile"|translate}}
                         </span>
                     </div>
                 </div>
