add random image and fix weibo login

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -306,7 +306,7 @@
 .translator-cover {
     position: relative;
     margin-bottom: 50px;
-    background-color: rgb(166, 208, 122);
+    background-color: @gray-ligher;
     .translator-info {
         // position: absolute;
         bottom: 0;
