--- a/src/templates/tasks.html
+++ b/src/templates/tasks.html
@@ -55,7 +55,7 @@
             </div>
             <a ng-href="#/{{task.task_id}}/applicants" class="block section text-gray" ng-if="task.request_users.length>0">
                 <span ng-repeat="applicant in task.request_users track by $index" ng-if="$index<5 && task.contact_request_status ==0">
-                    <img ng-src="{{staticImageUrl + applicant.avatar || '../images/avatar.png'}}" alt="" class="circle icon">
+                    <img ng-src="{{staticImageUrl + applicant.avatar || '../images/avatar.png'}}" err-src="../images/avatar_1.png" alt="" class="circle icon">
                 </span>
                 <span class="text-gray" ng-if="task.contact_request_status == '1'">
                     {{task.contact_request}}
